--- a/HopDongBaoHiem.csproj
+++ b/HopDongBaoHiem.csproj
@@ -72,6 +72,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AdvancedInsuranceContract.cs" />
+    <Compile Include="BasicInsuranceContract.cs" />
+    <Compile Include="InsuranceContractsManager.cs" />
     <Compile Include="SearchPage.xaml.cs">
       <DependentUpon>SearchPage.xaml</DependentUpon>
     </Compile>
