Thay đổi cách nhập type, xử lý ngoại lệ

--- a/HopDongBaoHiem.csproj
+++ b/HopDongBaoHiem.csproj
@@ -150,9 +150,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="TextFile1.txt">
+    <None Include="TextFile1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
